# polypath

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: parse.rs  read.rs
examples/: iter.rs  load.rs  vertices.rs
src/: bounding.rs  lib.rs  meshlet.rs  obj.rs  opt.rs  parse.rs  vec3.rs
tests/: cubes.rs  write_back.rs
